--- a/.github/workflows/DotnetCICD.yml
+++ b/.github/workflows/DotnetCICD.yml
@@ -26,15 +26,17 @@ jobs:
       run: dotnet build --no-restore
 
   test:
+  
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
     - name: Test 
       run: dotnet test
     
